--- a/CSS/main.css
+++ b/CSS/main.css
@@ -13,6 +13,21 @@
 
 }
 
+/* Intro */
+
+#intro
+{
+    background-attachment: fixed;
+    background-image: url("images/intro.svg");
+    background-position: top right;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+    #intro p
+    {
+        font-size: 1.25em;
+    }
 
 *
 {
@@ -483,35 +498,10 @@ textarea
 
         .image.right
         {
-            float: left;
+            float: right;
             margin: 0 0 1em 1.5em;
             top: 0.25em;
         }
-
-        .image.fit
-        {
-            display: block;
-            margin: 0 0 2em 0;
-            width: 100%;
-        }
-
-            .image.fit img
-            {
-                width: 100%;
-            }
-
-        .image.main
-        {
-            display: block;
-            margin: 0 0 3em 0;
-            width: 100%;
-        }
-
-            .image.main img
-            {
-                width: 100%;
-            }
-
 
 /* action */
 
@@ -533,69 +523,24 @@ ul.actions
         vertical-align: middle;
     }
 
-    ul.actions.special
-    {
-        -moz-justify-content: center;
-        -webkit-justify-content: center;
-        -ms-justify-content: center;
-        justify-content: center;
-        width: 100%;
-        margin-left: 0;
+/* Contact */
+
+ul.contact {
+    list-style: none;
+    padding: 0;
+}
+
+    ul.contact > li {
+        padding: 0;
+        margin: 1.5em 0 0 0;
     }
 
-        ul.actions.special li:first-child
-        {
-            padding-left: 0;
+        ul.contact > li:first-child {
+            margin-top: 0;
         }
+
     
-    ul.actions.stacked
-    {
-        -moz-flex-direction: column;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        margin-left: 0;
-    }
-
-        ul.actions.stacked li
-        {
-            padding: 1.3em 0 0 0;
-        }
-
-            ul.actions.stacked li:first-child
-            {
-                padding-top: 0;
-            }
-        
-    ul.actions.fit
-    {
-        width: calc(100% + 1em);
-    }
-
-        ul.actions.fit li
-        {
-            -moz-flex-grow: 1;
-            -webkit-flex-grow: 1;
-            -ms-flex-grow: 1;
-            flex-grow: 1;
-            -moz-flex-shrink: 1;
-            -webkit-flex-shrink: 1;
-            -ms-flex-shrink: 1;
-            flex-shrink: 1;
-            width: 100%;
-        }
-
-            ul.actions.fit li > *
-            {
-                width: 100%;
-            }
-        
-        ul.actions.fit.stacked
-        {
-            width: 100%;
-        }
-
-        /* Icons */
+/* Icons */
 
 	ul.icons {
 		cursor: default;
@@ -603,20 +548,24 @@ ul.actions
 		padding-left: 0;
 	}
 
-		ul.icons li {
+		ul.icons li 
+        {
 			display: inline-block;
 			padding: 0 0.75em 0 0;
 		}
 
-			ul.icons li:last-child {
+			ul.icons li:last-child 
+            {
 				padding-right: 0;
 			}
 
-			ul.icons li > a, ul.icons li > span {
+			ul.icons li > a, ul.icons li > span 
+            {
 				border: 0;
 			}
 
-				ul.icons li > a .label, ul.icons li > span .label {
+				ul.icons li > a .label, ul.icons li > span .label 
+                {
 					display: none;
 				}
 
@@ -631,7 +580,7 @@ ul.menu
 
     ul.menu > li 
     {
-        border-left: 1px rgba(255, 255, 255, 0.15);
+        border-left: solid 1px rgba(255, 255, 255, 0.15);
         display: inline-block;
         line-height: 1;
         margin-left: 1.5em;
@@ -661,12 +610,12 @@ section
 
     header h2 +p
     {
-        font-size: 1.25;
+        font-size: 1.25em;
         margin-top: -1em;
         line-height: 1.5em;
     }
 
-    header h3 + span
+    header h3 + p
     {
         font-size: 1.1em;
         margin-top: -0.8em;
@@ -691,7 +640,7 @@ section
     .split > :nth-child(2n - 1)
     {
         padding-right: 2.5em;
-        border-right: 1px rgba(255, 255, 255, 0.15);
+        border-right: solid 1px rgba(255, 255, 255, 0.15);
     }
 
     .split > :nth-child(2n)
@@ -701,12 +650,12 @@ section
 
     .split.style1 > :nth-child(2n - 1)
     {
-        width: calc(66% - 2.5em);
+        width: calc(66.66666% - 2.5em);
     }
 
     .split.style1 > :nth-child(2n)
     {
-        width: calc(33% - 2.5em);
+        width: calc(33.33333% - 2.5em);
     }
 
 /* spotlights */
@@ -778,8 +727,6 @@ section
                 -ms-justify-content: center;
                 justify-content: center;
                 width: 50em;
-                -ms-flex: 1;
-                flex: 1
             }
 
                 .spotlights > section > .content > .image
@@ -789,20 +736,20 @@ section
                     -ms-transform: translateX(0) translateY(0);
                     transform: translateX(0) translateY(0);
                     -moz-transition: opacity 1s ease, -moz-transform 1s ease;
-                    -webkit-transition: opacity 1s ease, -moz-transform 1s ease;
-                    -ms-transition: opacity 1s ease, -moz-transform 1s ease;
-                    transition: opacity 1s ease, -moz-transform 1s ease;
+                    -webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
+                    -ms-transition: opacity 1s ease, -ms-transform 1s ease;
+                    transition: opacity 1s ease, transform 1s ease;
                     opacity: 1;
                 }
 
             .spotlights > section:nth-child(2)
             {
-                background-color: rgba(0, 0, 0, 0.1);
+                background-color: rgba(0, 0, 0, 0.5);
             }
 
             .spotlights > section:nth-child(3)
             {
-                background-color: rgba(0, 0, 0, 0.5);
+                background-color: rgba(0, 0, 0, 0.1);
             }
 
             .spotlights > section.inactive > .image:before,
@@ -861,12 +808,12 @@ section
             background-color: #3e4094;
         }
 
-        .wrapper-style3
+        .wrapper.style3
         {
             background-color: #b74e91;
         }
 
-        .wrapper-style3-alt
+        .wrapper.style3-alt
         {
             background-color: #953d75;
         }
@@ -899,11 +846,11 @@ section
             -webkit-transform: translateY(0);
             -ms-transform: translateY(0);
             transform: translateY(0);
-            -moz-transition: opacity 1s ease, -moz-transformation 1s ease;
-            -webkit-transition: opacity 1s ease, -webkit-transformation 1s ease;
-            -ms-transition: opacity 1s ease, -ms-transformation 1s ease;
-            transition: opacity 1s ease, transformation 1s ease;
-            opacity: 1.0;
+            -moz-transition: opacity 1s ease, -moz-transform 1s ease;
+            -webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
+            -ms-transition: opacity 1s ease, -ms-transform 1s ease;
+            transition: opacity 1s ease, transform 1s ease;
+            /*opacity: 1.0;*/
         }
 
         .wrapper.fade-up.inactive > .inner,
@@ -990,6 +937,19 @@ section
             margin: 0;
             padding: 0;
         }
+
+        #header > nav > ul > li
+        {
+            display: inline-block;
+            margin-left: 1.75em;
+            padding: 0;
+            vertical-align: middle;
+        }
+
+            #header > nav > ul > li:first-child 
+            {
+                margin-left: 0;
+            }
 
             #header > nav > ul > li a
             {
@@ -1104,7 +1064,7 @@ section
 
             #sidebar nav > ul
             {
-                list-style: 100%;
+                list-style: none;
                 padding: 0;
             }
 
@@ -1246,5 +1206,8 @@ section
     {
         font-size: 1.25em;
     }
+
+
+
 
 
